Fix alignment when showing list form error

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -87,7 +87,7 @@
 .invalid-feedback {
   color: #a94442;
   display: block;
-  margin: -1rem 0 2rem;
+  margin: -1rem 0 1rem;
 }
 
 .topic-item { list-style: none; }
@@ -117,9 +117,14 @@
 
 .form {
   display: flex;
-  align-items: flex-end;
+  align-items: baseline;
+  margin-bottom: 1rem;
 
-  &__field { flex-grow: 2; }
+  &__field {
+    flex-grow: 2;
+    padding-left: 2rem;
+  }
+
   &__button {
     padding-left: 2rem;
     margin-bottom: 0.5rem;
